--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -329,7 +329,8 @@
   flex-direction: column;
 }
 
-.object-row:hover {
+.object-row:hover,
+.object-row.hover {
   border: 2px solid var(--color-orange);
 }
 
@@ -1590,7 +1591,6 @@
   left: 2rem;
 }
 
-
 .catalog__map-more {
   background-color: #fbeed7;
   background-color: var(--color-beige-light);
@@ -1613,12 +1613,12 @@
   left: 50%;
   margin-top: 3.5rem;
   top: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
-.catalog__full .catalog__map-more{
+.catalog__full .catalog__map-more {
   margin-left: -8px;
 }
 
@@ -2168,24 +2168,19 @@
   left: 0;
   position: absolute;
   top: calc(50% - 10px);
-  -webkit-transition: background-color 0.25s,
-    border-color 0.25s;
-  transition: background-color 0.25s,
-    border-color 0.25s;
+  -webkit-transition: background-color 0.25s, border-color 0.25s;
+  transition: background-color 0.25s, border-color 0.25s;
   width: 20px;
-  box-shadow: 0px 2px 4px rgba(0,
-      0,
-      0,
-      0.08);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08);
   background-color: var(--color-beige-light);
 }
 
-#form-catalog-filter .checkbox input:checked+span:before {
+#form-catalog-filter .checkbox input:checked + span:before {
   background-color: var(--color-orange);
   border-color: var(--color-orange);
 }
 
-#form-catalog-filter .checkbox input:checked+span:after {
+#form-catalog-filter .checkbox input:checked + span:after {
   content: "";
   width: 18px;
   height: 18px;
@@ -2221,8 +2216,7 @@
 }
 
 * {
-  font-family: "Lato",
-    sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
 
 .header {
@@ -2298,7 +2292,7 @@
   max-width: 871px;
 }
 
-.catalog_map>.button,
+.catalog_map > .button,
 .catalog-filter_close {
   display: none;
 }
@@ -2407,9 +2401,12 @@
   line-height: 24px;
 }
 
-.catalog_map .form_group_wrapper>div,
+.catalog_map .form_group_wrapper > div,
 .catalog_map .form__group,
-.catalog_map .form_group_wrapper-filter_items .form__row.calendar>.form__item {
+.catalog_map
+  .form_group_wrapper-filter_items
+  .form__row.calendar
+  > .form__item {
   width: 100%;
 }
 
@@ -2480,7 +2477,7 @@
   z-index: 12;
 }
 
-.catalog_map .calendar__dropdown>* {
+.catalog_map .calendar__dropdown > * {
   min-height: 1px;
   min-width: 1px;
 }
@@ -2562,15 +2559,15 @@
   width: 0;
 }
 
-.catalog_map .calendar__navigation .list__item+.list__item {
+.catalog_map .calendar__navigation .list__item + .list__item {
   margin-top: 0;
 }
 
-.catalog_map .calendar__navigation .list__item+.list__item .list__item-year {
+.catalog_map .calendar__navigation .list__item + .list__item .list__item-year {
   padding-top: 0;
 }
 
-.catalog_map .calendar__navigation .list__item+.list__item .list__item-year {
+.catalog_map .calendar__navigation .list__item + .list__item .list__item-year {
   padding: 0;
 }
 
@@ -2638,7 +2635,7 @@
   border-radius: 8px 8px 0 0;
 }
 
-.catalog_map .calendar__month>input {
+.catalog_map .calendar__month > input {
   border: none;
   height: 0;
   left: 0;
@@ -2882,7 +2879,7 @@
   transition: background-color 0.25s;
 }
 
-.catalog_map .guests__children .counter button>* {
+.catalog_map .guests__children .counter button > * {
   min-height: 1px;
   min-width: 1px;
 }
@@ -2909,8 +2906,7 @@
   -webkit-transition: -webkit-transform 0.25s;
   transition: -webkit-transform 0.25s;
   transition: transform 0.25s;
-  transition: transform 0.25s,
-    -webkit-transform 0.25s;
+  transition: transform 0.25s, -webkit-transform 0.25s;
   bottom: 26px;
 }
 
@@ -2966,7 +2962,7 @@
   display: flex;
 }
 
-.catalog_map .guests__item>* {
+.catalog_map .guests__item > * {
   min-height: 1px;
   min-width: 1px;
 }
@@ -3000,7 +2996,7 @@
   flex: none;
 }
 
-.catalog_map .guests .counter>* {
+.catalog_map .guests .counter > * {
   min-height: 1px;
   min-width: 1px;
 }
@@ -3021,11 +3017,11 @@
   padding: 2rem 1.4rem;
 }
 
-.catalog_map .guests__guests .guests__item+.guests__item {
+.catalog_map .guests__guests .guests__item + .guests__item {
   margin-top: 2rem;
 }
 
-.catalog_map .guests__guests .guests__item+.guests__item {
+.catalog_map .guests__guests .guests__item + .guests__item {
   margin-top: 12px;
 }
 
@@ -3098,7 +3094,7 @@
   padding: 12px 12px 12px;
 }
 
-.catalog_map .guests__children .guests__item+.guests__item {
+.catalog_map .guests__children .guests__item + .guests__item {
   padding: 0 12px 12px;
 }
 
@@ -3117,7 +3113,7 @@
   padding: 0 1.6rem;
 }
 
-.catalog_map .autocomplete-dropdown__item+.autocomplete-dropdown__item {
+.catalog_map .autocomplete-dropdown__item + .autocomplete-dropdown__item {
   margin-top: 1rem;
 }
 
@@ -3364,7 +3360,8 @@
   background-color: #00000099 !important;
 }
 
-.ymaps-2-1-79-float-button.ymaps-2-1-79-_checked .ymaps-2-1-79-float-button-icon.ymaps-2-1-79-float-button-icon_icon_collapse,
+.ymaps-2-1-79-float-button.ymaps-2-1-79-_checked
+  .ymaps-2-1-79-float-button-icon.ymaps-2-1-79-float-button-icon_icon_collapse,
 .ymaps-2-1-79-float-button-icon.ymaps-2-1-79-float-button-icon_icon_expand {
   width: 38px !important;
   height: 38px !important;
@@ -3395,12 +3392,9 @@
   font-size: 14px;
   font-weight: 400;
   text-align: center;
-  -webkit-transform: translate(-50%,
-      -50%);
-  -ms-transform: translate(-50%,
-      -50%);
-  transform: translate(-50%,
-      -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   vertical-align: top;
   z-index: 9;
   line-height: 20px;
@@ -3464,7 +3458,7 @@
   padding: 8px 0;
 }
 
-.mini-balloon__content>* {
+.mini-balloon__content > * {
   min-height: 1px;
   min-width: 1px;
 }
@@ -3513,6 +3507,10 @@
 
 .catalog__map-more {
   border-radius: 16px;
+}
+
+.catalog__map-more:hover {
+  outline: 2px solid var(--color-orange);
 }
 
 .catalog__map-more .object {
@@ -3769,7 +3767,7 @@
   top: 44px;
   left: 4px;
   z-index: 3;
-  background-color: #F4E6CB;
+  background-color: #f4e6cb;
   border-radius: 8px;
   padding: 12px;
   max-width: 260px;
@@ -3809,7 +3807,7 @@
   display: flex;
   height: 44px;
   align-items: center;
-  background-color: #F9EED8;
+  background-color: #f9eed8;
   padding: 11px 12px;
   border-radius: 12px;
   font-size: 16px;
@@ -3817,7 +3815,7 @@
 }
 
 .price-input__wrap label {
-  color: #80899C;
+  color: #80899c;
   font-size: 16px;
   line-height: 22px;
 }
@@ -3838,7 +3836,7 @@
 
 .price-filter .slider-range.ui-widget-content {
   margin: 22px 10px;
-  background-color: #F9EED8;
+  background-color: #f9eed8;
   border: unset;
   border-radius: 2px;
   height: 4px;
@@ -3853,17 +3851,17 @@
 .price-filter .slider-range.ui-slider .ui-slider-handle {
   height: 24px;
   width: 24px;
-  box-shadow: 0px 1.5px 9px -0.75px #0A090B1A;
+  box-shadow: 0px 1.5px 9px -0.75px #0a090b1a;
   border: 0.5px solid var(--color-btn);
   border-radius: 12px;
-  background: #F9EED8;
+  background: #f9eed8;
   cursor: pointer;
 }
 
 .price-filter .slider-range.ui-slider .ui-slider-handle:focus,
 .price-filter .slider-range.ui-slider .ui-slider-handle:active,
 .price-filter .slider-range.ui-slider .ui-slider-handle:focus-visible {
-  box-shadow: 0px 1.5px 1.5px -0.75px #0A090B0A;
+  box-shadow: 0px 1.5px 1.5px -0.75px #0a090b0a;
   border: 1px solid var(--color-orange);
   outline: none;
 }
@@ -3888,7 +3886,7 @@
 
 .sort__wrapper .sort__list {
   padding: 4px 0;
-  background: #F4E6CB;
+  background: #f4e6cb;
   list-style: none;
   border-radius: 8px;
   position: absolute;
@@ -3923,15 +3921,15 @@
   cursor: pointer;
 }
 
-.sort__wrapper .list__link input:checked+label,
+.sort__wrapper .list__link input:checked + label,
 .sort__wrapper .list__link:hover label {
   border: 1px solid var(--color-orange);
 }
 
-.sort__wrapper .list__link input:checked+label:before,
+.sort__wrapper .list__link input:checked + label:before,
 .sort__wrapper .list__link:hover label:before {
   display: block;
-  content: '';
+  content: "";
   width: 10px;
   height: 10px;
   background-color: var(--color-orange);
@@ -3946,7 +3944,7 @@
   margin-right: 0;
 }
 
-.filter-count{
+.filter-count {
   display: block;
   margin-left: 6px;
   border-radius: 16px;
@@ -3958,22 +3956,22 @@
   color: var(--color-white);
 }
 
-.filter-clear_wrap{
+.filter-clear_wrap {
   display: flex;
   flex-wrap: wrap;
   margin-top: -16px;
 }
 
-.filter-clear_wrap .filter-clea__btn{
+.filter-clear_wrap .filter-clea__btn {
   margin: 0 12px 12px 0;
   cursor: pointer;
 }
 
-.filter-clear_wrap .filter-clea__btn svg{
+.filter-clear_wrap .filter-clea__btn svg {
   margin-left: 6px;
 }
 
-.body__on_map .catalog__map.catalog__on_map{
+.body__on_map .catalog__map.catalog__on_map {
   top: 0;
 }
 
@@ -4092,14 +4090,8 @@
 
   .calendar__navigation {
     border-right: none;
-    -webkit-box-shadow: 0 0.4rem 0.8rem rgba(0,
-        0,
-        0,
-        0.08);
-    box-shadow: 0 0.4rem 0.8rem rgba(0,
-        0,
-        0,
-        0.08);
+    -webkit-box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.08);
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.08);
     -webkit-box-shadow: var(--shadow-2);
     box-shadow: var(--shadow-2);
     display: grid;
@@ -4109,7 +4101,7 @@
     width: auto;
   }
 
-  .calendar__navigation>* {
+  .calendar__navigation > * {
     min-height: 1px;
     min-width: 1px;
   }
@@ -4131,7 +4123,7 @@
     justify-content: center;
   }
 
-  .calendar__navigation-item>* {
+  .calendar__navigation-item > * {
     min-height: 1px;
     min-width: 1px;
   }
@@ -4160,7 +4152,7 @@
     display: none;
   }
 
-  .calendar__navigation .list__item+.list__item {
+  .calendar__navigation .list__item + .list__item {
     margin-top: 0;
   }
 
@@ -4210,7 +4202,7 @@
     padding-bottom: 0;
   }
 
-  .object-row_profile+.object-row {
+  .object-row_profile + .object-row {
     margin-top: 0;
   }
 
@@ -4236,7 +4228,7 @@
     padding-right: 0;
   }
 
-  .object-row_profile .object-row__description>*+* {
+  .object-row_profile .object-row__description > * + * {
     margin-top: 1.6rem;
   }
 
@@ -4348,10 +4340,8 @@
     padding: 2rem 1.8rem;
     position: absolute;
     top: calc(100% - 0.2rem);
-    -webkit-transition: visibility 0.25s,
-      opacity 0.25s;
-    transition: visibility 0.25s,
-      opacity 0.25s;
+    -webkit-transition: visibility 0.25s, opacity 0.25s;
+    transition: visibility 0.25s, opacity 0.25s;
     visibility: hidden;
     width: 100%;
     z-index: 3;
@@ -4364,7 +4354,7 @@
     pointer-events: none;
   }
 
-  .objects__heading .list__item+.list__item {
+  .objects__heading .list__item + .list__item {
     margin-left: 0;
     margin-top: 1.2rem;
   }
@@ -4466,7 +4456,6 @@
 }
 
 @media (max-width: 900px) {
-  
   .catalog_map .field.field_autocomplete {
     border-radius: 12px 12px 0 0;
   }
@@ -4534,7 +4523,7 @@
   .wrapper_title_catalog_page h1.page_title {
     display: block;
   }
-  
+
   .body__on_map .section_catalog {
     margin-top: -114px;
   }
@@ -4763,9 +4752,9 @@
   }
 
   .filters_attrs,
-  .form_group_wrapper-filter_items>div,
-  .form_group_wrapper>div,
-  .form__group>div {
+  .form_group_wrapper-filter_items > div,
+  .form_group_wrapper > div,
+  .form__group > div {
     width: 100% !important;
     max-width: 100% !important;
   }
@@ -4983,7 +4972,7 @@
     margin-right: 1rem;
   }
 
-  .crumbs__controls .button+.button {
+  .crumbs__controls .button + .button {
     margin-left: 0;
   }
 
@@ -4994,7 +4983,7 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  .catalog__list>* {
+  .catalog__list > * {
     min-height: 1px;
     min-width: 1px;
   }
@@ -5005,7 +4994,7 @@
 }
 
 @media (max-width: 599px) {
-  .object-row_profile+.object-row {
+  .object-row_profile + .object-row {
     border-top: 0.1rem solid #000;
     border-top: 0.1rem solid var(--color-black);
     padding-top: 3.2rem;
@@ -5036,4 +5025,9 @@
     margin-top: 0;
     padding-right: 0;
   }
+}
+
+.house-type .swiper-slide svg {
+  width: 40px;
+  height: 40px;
 }
