116722 | Мобилка iPhone \ Блок с ценой \ Слиплись кнопки + 116723

--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -373,6 +373,7 @@
   display: block;
   height: auto;
   width: 100%;
+  border-radius: 12px;
 }
 
 .object-row .favorite {
@@ -3787,6 +3788,10 @@
   width: 100%;
 }
 
+.price-filter .price-filter__controls .button:first-child{
+  margin-right: 12px;
+}
+
 .price-filter .button.button-accept {
   color: var(--color-white);
 }
@@ -4030,6 +4035,7 @@
     grid-template-columns: 1fr 1fr;
     height: 5rem;
     position: relative;
+    z-index: 1;
   }
 
   .catalog_map .calendar__month {
@@ -4077,7 +4083,6 @@
 
   .catalog_map .calendar__navigation .list__item button {
     width: auto;
-    margin: 0 auto;
   }
 
   .catalog_map .calendar__month .flatpickr-calendar.inline {
