117304 | Каталог / Карточка объекта / Отсутствуют кнопки переключения картинок

--- a/local/templates/main/assets/css/catalog.css
+++ b/local/templates/main/assets/css/catalog.css
@@ -3756,7 +3756,7 @@
 
 .slider-gallery .swiper-button-prev,
 .slider-gallery .swiper-button-next {
-  display: none;
+  /*display: none;*/
 }
 
 .catalog-full__wrapper .cert-index__seo-text {
