--- a/local/components/addamant/certificates.buy/templates/.default/style.css
+++ b/local/components/addamant/certificates.buy/templates/.default/style.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  max-width: calc(1380px + var(--container-gap)* 2);
+  max-width: calc(1380px + var(--container-gap) * 2);
 }
 
 .form__title-block {
@@ -162,7 +162,7 @@ label.selected {
   color: #e6c48e;
 }
 
-.format__electro label.selected svg g>path:first-child {
+.format__electro label.selected svg g > path:first-child {
   fill: #fbeed7;
 }
 
@@ -172,7 +172,7 @@ label.selected {
   background-color: #e6c48e;
 }
 
-.format__fiz label.selected svg g>path:first-child {
+.format__fiz label.selected svg g > path:first-child {
   fill: #fbeed7;
 }
 
@@ -415,12 +415,28 @@ label.selected {
   font-weight: 600;
 }
 
-.summ__price {
+.summ__price,
+.summ__price--old {
   font-family: var(--header-text-font-family);
   font-size: 28px;
   line-height: 29px;
   font-weight: 600;
   letter-spacing: -0.28px;
+}
+
+.summ__price--old {
+  position: relative;
+  display: none;
+}
+
+.summ__price--old::before {
+  content: "";
+  width: 120%;
+  height: 3px;
+  background-color: var(--color-orange);
+  position: absolute;
+  left: -10%;
+  top: 42%;
 }
 
 .summ__item.all {
@@ -443,8 +459,9 @@ input.visually-hidden {
 }
 
 .promo__item-input {
-  display: flex;
+  display: none;
   margin-top: 37px;
+  position: relative;
 }
 
 .promo__item-input input {
@@ -452,25 +469,26 @@ input.visually-hidden {
   max-width: 320px;
   background-color: transparent;
   border: 1.55px solid #000000;
-  padding: 14px 15px;
+  padding: 14px 45px 14px 15px;
   font-size: 20px;
   line-height: 30px;
   border-radius: 2px;
+  width: 100%;
 }
 
 .promo__item-input input::placeholder {
-  color: #ACACAC;
+  color: #acacac;
   opacity: 1;
 }
 
 .promo__item-input input::-ms-input-placeholder {
-  color: #ACACAC;
+  color: #acacac;
 }
 
-.promo__item-input button {
+.promo__item-input .promo__button {
   max-width: 350px;
   width: 100%;
-  background-color: #F18D3F;
+  background-color: #f18d3f;
   text-align: center;
   padding: 16px 0;
   font-size: 21px;
@@ -482,14 +500,53 @@ input.visually-hidden {
   font-family: var(--header-text-font-family);
 }
 
-.promo__error {
+.promo__info {
   font-family: var(--base-font-family);
   font-size: 18.5px;
   font-weight: 500;
   line-height: 23.26px;
-  color: #D71515;
   max-width: 528px;
   margin-top: 17px;
+  display: none;
+}
+
+.error .promo__info,
+.error .promo__item-input input {
+  color: #d71515;
+}
+
+.promo__item-wrap.entered .promo__button {
+  display: none;
+}
+
+.coupon__success-icon {
+  position: absolute;
+  left: 277px;
+  top: calc(50% - 9px);
+  display: none;
+}
+
+.promo__item-wrap.entered .coupon__success-icon {
+  display: block;
+}
+
+.coupon__delete {
+  background-color: transparent;
+  border: none;
+  padding: 5px;
+  display: none;
+  align-items: center;
+}
+
+.promo__item-wrap.entered .coupon__delete {
+  display: flex;
+}
+
+.summ__prices {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  align-items: flex-end;
 }
 
 @media (max-width: 1023px) {
@@ -672,10 +729,10 @@ input.visually-hidden {
     max-width: 30px !important;
   }
 
-  .checkbox input:checked+span:after {
+  .checkbox input:checked + span:after {
     width: 8px;
     height: 8px;
-    top: calc(50% - 8px);
+    top: calc(50% - 5px);
     left: 4px;
   }
 
@@ -799,47 +856,54 @@ input.visually-hidden {
   .promo__item-wrap {
     margin-top: 32px;
   }
-  
+
   .promo__item span {
     font-size: 13px;
     line-height: 19px;
   }
-  
+
   .promo__item-input {
     display: flex;
     margin-top: 18px;
   }
-  
+
   .promo__item-input input {
     margin-right: 4px;
-    max-width: 320px;
+    max-width: 160px;
     background-color: transparent;
     border: 1.55px solid #000000;
     padding: 6.5px 7.5px;
     font-size: 10px;
     line-height: 15px;
   }
-  
+
   .promo__item-input input::placeholder {
-    color: #ACACAC;
+    color: #acacac;
     opacity: 1;
   }
-  
+
   .promo__item-input input::-ms-input-placeholder {
-    color: #ACACAC;
+    color: #acacac;
   }
-  
-  .promo__item-input button {
-    background-color: #F18D3F;
+
+  .promo__item-input .promo__button {
+    background-color: #f18d3f;
     padding: 7.5px 0;
     font-size: 10px;
     line-height: 21px;
   }
-  
-  .promo__error {
+
+  .promo__info {
     font-size: 9px;
     line-height: 11.5px;
     max-width: 260px;
     margin-top: 12px;
+  }
+
+  .coupon__success-icon {
+    width: 9px;
+    height: 9px;
+    top: calc(50% - 4px);
+    left: 140px;
   }
 }
