--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -2081,6 +2081,11 @@
   display: -ms-flexbox;
   display: flex;
   padding-bottom: 1.6rem;
+  flex-wrap: wrap;
+}
+
+.room__offers {
+  flex-basis: 100%;
 }
 
 .room > * {
