--- a/local/templates/main/assets/css/app.css
+++ b/local/templates/main/assets/css/app.css
@@ -44,6 +44,8 @@
   --shadow-2: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.08);
   --color-btn: #e0c695;
   --color-btn-h: #d7ba84;
+  --color-new-1: #f4e6cb;
+  --color-text-1: #434956;
 }
 
 @font-face {
